fixed product image width property to prevent stretching and added styling for sale label

--- a/src/pages/ProductPage/ProductPage.module.scss
+++ b/src/pages/ProductPage/ProductPage.module.scss
@@ -8,6 +8,7 @@
 
 .img {
   width: 400px;
+  object-fit: contain;
 }
 
 .product {
@@ -48,4 +49,12 @@
 .formats_wrapper {
   display: flex;
   gap: 10px;
+}
+.sale_label {
+  width: fit-content;
+  padding: 5px 10px;
+  font-size: 11px;
+  text-transform: uppercase;
+  background-color: #fd4444;
+  border-radius: 5px;
 }
